# process-gpt-a2a-orch

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.a2a_agent_executor  Dockerfile.a2a_agent_webhook_receiver  README.md  pyproject.toml  requirements.txt  run_agent_executor.sh  run_simulator.sh
sandbox/: smart_logger.py
sandbox/a2a_sdk_samples/web_hook/: .gitignore  logger_config.py
sandbox/a2a_sdk_samples/web_hook/client/: __init__.py  client.py  webhook_receiver.py
sandbox/a2a_sdk_samples/web_hook/commands/runs/: runClient.sh  runPushNotificationServer.sh  runSyncServer.sh
sandbox/a2a_sdk_samples/web_hook/server_push_notification/: __init__.py  agent_card.py  agent_executor.py  server.py
sandbox/a2a_sdk_samples/web_hook/server_sync/: agent_card.py  agent_executor.py  server.py
src/: run_agent_executor.py  simulation.py
src/a2a_agent_executor/: __init__.py  a2a_client.py  database.py  executor.py  form_processor.py  server.py  test_a2a_client.py
src/a2a_agent_webhook_receiver/: __init__.py  database.py  models.py  processor.py  server.py  smart_logger.py
src/a2a_form_processor/: __init__.py  database.py  form_processor.py  llm.py
