[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-agent-executor"
version = "0.1.0"
description = "A2A Agent Executor that forwards requests to another A2A agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Process GPT Team", email = "info@uengine.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "a2a-sdk>=0.2.4",
    "pydantic>=2.0.0",
    "asyncio",
    "uvicorn>=0.17.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "process-gpt-agent-sdk==0.3.4",
    "pytest>=8.4.2",
    "process-gpt-llm-factory>=1.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
a2a-agent-executor = "a2a_agent_executor.cli:main"
a2a-webhook-receiver = "a2a_agent_webhook_receiver.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_agent_executor", "src/a2a_agent_webhook_receiver", "src/a2a_form_processor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/a2a_agent_executor",
    "src/a2a_agent_webhook_receiver",
    "src/a2a_form_processor",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
